@@ -1,3 +1,10 @@
+2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-15-03
+	* fix ordering bug (oracle) reported by Martin
+	* fix convert dialog to correctly handle requested
+	sequences/modules
+
 2007-11-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-15-02
